updated core for better performance

--- a/builder/resume.tex
+++ b/builder/resume.tex
@@ -1,36 +1,18 @@
-
-\documentclass[]{resume-custom}
-\usepackage{fancyhdr}
-
-\pagestyle{fancy}
-\fancyhf{}
-
-\begin{document}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\documentclass{resumecustom}%
+\usepackage{fancyhdr}%
 %
-%     LAST UPDATED DATE
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\lastupdated
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%     TITLE NAME
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\begin{document}%
+\pagestyle{fancy}%
+\fancyhf{}%
+\lastupdated%
 \namesection{Rishbabh}{Jain}{
-
-\urlstyle{same}
-
-\href{janedoe@email.com}{janedoe@email.com} |
-+91 9876543210 | 
-\href{www.e-resume.vercel.app}{www.e-resume.vercel.app}
-\newline
-Eager to expand my skill set through external trainings to help boost all major front desk KPIs. Hoping to leverage organizational skills to help ABC Corp introduce time-saving schemes for all executives.
-
-}
+	\urlstyle{same}
+	\href{janedoe@email.com}{janedoe@email.com}\textbar{} 
+	+91 9876543210 \textbar{} 
+	\href{www.e-resume.vercel.app}{www.e-resume.vercel.app}
+	\newline
+	Eager to expand my skill set through external trainings to help boost all major front desk KPIs. Hoping to leverage organizational skills to help ABC Corp introduce time-saving schemes for all executives.
+}%
 \end{document}
