added minipage functions
 with some additional data fields like links skills etc

--- a/builder/resume.tex
+++ b/builder/resume.tex
@@ -1,5 +1,6 @@
 \documentclass{resumecustom}%
 \usepackage{fancyhdr}%
+\usepackage{ragged2e}%
 %
 %
 %
@@ -9,10 +10,66 @@
 \lastupdated%
 \namesection{Rishbabh}{Jain}{
 	\urlstyle{same}
-	\href{janedoe@email.com}{janedoe@email.com}\textbar{} 
+	\href{mailto:janedoe@email.com}{janedoe@email.com} \textbar{} 
 	+91 9876543210 \textbar{} 
-	\href{www.e-resume.vercel.app}{www.e-resume.vercel.app}
-	\newline
-	Eager to expand my skill set through external trainings to help boost all major front desk KPIs. Hoping to leverage organizational skills to help ABC Corp introduce time-saving schemes for all executives.
+	\href{www.e-resume.vercel.app}{www.e-resume.vercel.app} \textbar{} 
+	Bengaluru 
 }%
+\begin{minipage}{0.31\textwidth}%
+\section{Links}%
+\label{sec:Links}%
+Linkedin:// %
+\href{https://www.linkedin.com/in/sadanandpai/}{\textbf{sadanandpai}}%
+\newline%
+%
+Twitter:// %
+\href{https://www.twitter.com/sadanandpai/}{\textbf{sadanandpai}}%
+\newline%
+%
+Github:// %
+\href{https://github.com/sadanandpai/}{\textbf{sadanandpai}}%
+\newline%
+%
+Hackerrank:// %
+\href{https://www.hackerrank.com/paicube/}{\textbf{paicube}}%
+\newline%
+%
+Hackerearth:// %
+\href{https://www.hackerearth.com/sadanandpai/}{\textbf{sadanandpai}}%
+\newline%
+%
+Codechef:// %
+\href{https://www.codechef.com/sadanandpai/}{\textbf{sadanandpai}}%
+\newline%
+%
+Leetcode:// %
+\href{https://leetcode.com/paicube/}{\textbf{paicube}}%
+\newline%
+
+%
+\section{Education}%
+\label{sec:Education}%
+\subsection{MIT, University}%
+\label{subsec:MIT,University}%
+\descript{MS in Cloud technology}%
+\descript{2014 | 2016}
+%
+Score: 68\%%
+\sectionsep
+
+%
+\subsection{NMAMIT, Nitte}%
+\label{subsec:NMAMIT,Nitte}%
+\descript{B.Tech (VTU) in Computer Science}%
+\descript{2010 | 2014}
+%
+Score: 8.3 CGPA%
+\sectionsep
+
+%
+\end{minipage}%
+\hfill%
+\begin{minipage}{0.66\textwidth}%
+%
+\end{minipage}%
 \end{document}
