--- a/builder/resume.tex
+++ b/builder/resume.tex
@@ -15,7 +15,7 @@
 	\href{www.e-resume.vercel.app}{www.e-resume.vercel.app} \textbar{} 
 	Bengaluru 
 }%
-\begin{minipage}{0.31\textwidth}%
+\begin{minipage}[t]{0.31\textwidth}%
 \section{Links}%
 \label{sec:Links}%
 Linkedin:// %
@@ -67,9 +67,96 @@ Score: 8.3 CGPA%
 \sectionsep
 
 %
+\section{Skill}%
+\label{sec:Skill}%
+\subsection{Programming}%
+\textbf{\location{Over 5000 lines:}}%
+JavaScript \textbullet{} HTML5 \textbullet{} CSS \textbullet{} React \textbullet{} Angular%
+\newline%
+\textbf{\location{Familiar:}
+}%
+ \textbullet{} Firebase%
+ \textbullet{} jQuery%
+ \textbullet{} Redux%
+ \textbullet{} Algorithms%
+ \textbullet{} Progressive Web Apps%
+ \textbullet{} SQL%
+ \textbullet{} Data Structures%
+\newline%
+\textbf{\location{Tools:}
+}%
+ \textbullet{} Git%
+ \textbullet{} VS Code%
+ \textbullet{} Jira%
+ \textbullet{} Webpack%
+ \textbullet{} Eclipse%
+ \textbullet{} Bitbucket
+
+%
+\sectionsep%
+\section{Certificates}%
+\label{sec:Certificates}%
+
+%
+\subsection{Programming}%
+\subsection{Certificate of exceptional bug finder}
+%
+\location{2014-11-01 by XYZ client}%
+\sectionsep%
+\subsection{Programming}%
+\subsection{Certificate of best frontend developer}
+%
+\location{2016-11-01 by XYZ client}%
+\sectionsep%
+\sectionsep%
 \end{minipage}%
 \hfill%
-\begin{minipage}{0.66\textwidth}%
+\begin{minipage}[t]{0.66\textwidth}%
+\section{Experience}%
+\runsubsection{Company 1}%
+\descript{\textbar{} Senior Software Developer}%
+\location{Apr 2021 - Present }%
+\vspace{\topsep}%
+\begin{tightemize}%
+\item  Use my extensive experience with front end development to define the structure and components for the project, making sure they are reusable%
+\item Keep the code quality high reviewing code from other developers and suggesting improvements%
+\item  Interact with the designer to suggest changes and to make sure the view he has about the design is translated into actual functionality%
+\item  E-commerce maintenance with Fastcommerce, a Brazilian e-commerce platform%
+\end{tightemize}%
+\sectionsep%
+\runsubsection{Company 2}%
+\descript{\textbar{} Software Developer}%
+\location{Jun 2015 - Dec 2017 }%
+\vspace{\topsep}%
+\begin{tightemize}%
+\item Develop web applications based on Sharepoint, Drupal 8 and Episerver%
+\item Lead a team of 10 front end developers, giving support to the client's multi-cultural team, providing feedback, clarifying requirements and helping with technical questions%
+\item Keep the Project Manager and the IT Leads updated on the overall progress of the projects and manage the tasks distributed to the team%
+\item Keep the code and the features implemented by the other developers in accordance to the requirements%
+\end{tightemize}%
+\sectionsep%
+\runsubsection{Company 3}%
+\descript{\textbar{} Trainee Developer}%
+\location{Aug 2011 - May 2015 }%
+\vspace{\topsep}%
+\begin{tightemize}%
+\item Design easy user interfaces and great user experiences for the digital platforms of small companies%
+\item Wordpress development, including themes creation or customization, custom plugins development and training%
+\item E-commerce maintenance with Fastcommerce, a Brazilian e-commerce platform%
+\item E-commerce development with Magento, customizing preexisting themes%
+\item Integrate external services such as payment services, delivery, etc into Magento solutions%
+\end{tightemize}%
+\sectionsep%
+\section{Projects}%
+\runsubsection{Project Name}%
+ \textbar{} \href{youtube.com}{Link}
 %
+\vspace{\topsep}%
+\sectionsep%
+\runsubsection{Project Name 2}%
+ \textbar{} \href{gogole.com}{Link}
+%
+\vspace{\topsep}%
+\sectionsep%
 \end{minipage}%
 \end{document}
